--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 }
 :root {
   --blue0: #0d929a;
-  --blue1: #31A2A9;
-  --orange0: #F1C400;
+  --blue1: #31a2a9;
+  --orange0: #f1c400;
 }
 body {
   direction: rtl;
